# spectre-lang

./: .gitignore  CMakeLists.txt  LICENSE.md  MIPS_AST_backend_README.md  Makefile  README.md  alloc_regs.cpp  alloc_regs.hpp  arm32.cpp  arm32.hpp  ast_printer.cpp  ast_printer.hpp  basic_block.cpp  basic_block.hpp  buffer.cpp  buffer.hpp  config.hpp  diagnostics.cpp  diagnostics.hpp  error.cpp  error.hpp  expr.cpp  expr.hpp  file_io.cpp  file_io.hpp  graph.hpp  lir.cpp  lir.hpp  lir_instruction_set.hpp  main.cpp  middle_ir.cpp  middle_ir.hpp  mips.cpp  mips.hpp  mips2.cpp  mips2.hpp  mips_instruction_set.hpp  parser.cpp  parser.hpp  sp  (+8 more)
codegen/: alloc_regs.cpp  alloc_regs.hpp
core/: config.hpp  diagnostics.cpp  diagnostics.hpp  error.cpp  error.hpp  file_io.cpp  file_io.hpp
deprecated/: sp_Makefile
ir/: basic_block.cpp  basic_block.hpp  middle_ir.cpp  middle_ir.hpp
lexer/: buffer.cpp  buffer.hpp  token.cpp  token.hpp
libspectre/: .gitignore  Makefile  build.sh
opt/: basic_dce.cpp  basic_dce.hpp  calc_liveness.cpp  calc_liveness.hpp  cvt2ssa.cpp  cvt2ssa.hpp  cvt_from_ssa.cpp  cvt_from_ssa.hpp  fold_constants.cpp  fold_constants.hpp  insns_in_bb.cpp  insns_in_bb.hpp  mem2reg.cpp  mem2reg.hpp  simplify_cfg.cpp  simplify_cfg.hpp
opt_passes/: basic_dce.cpp  basic_dce.hpp  calc_liveness.cpp  calc_liveness.hpp  check_pass.cpp  check_pass.hpp  cvt2ssa.cpp  cvt2ssa.hpp  cvt_from_ssa.cpp  cvt_from_ssa.hpp  cycle_pass.cpp  cycle_pass.hpp  fold_constants.cpp  fold_constants.hpp  insns_in_bb.cpp  insns_in_bb.hpp  mem2reg.cpp  mem2reg.hpp  pass.cpp  pass.hpp  (+4 more)
(+520 files in other folders)
